[package]
name = "planetwars"
version = "0.1.2"
authors = ["ajuvercr <arthur.vercruysse@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozaic-core = { git = "https://github.com/iasoon/MOZAIC2", branch="prototype" }
rand = { version = "0.7.3", default-features = true }

async-std = { version = "1.7.0", features = ["attributes"] }
futures = { version = "0.3.8", features = ["executor", "thread-pool"] }
tokio = { version = "0.3", features = ["full"] }
hex = { version = "0.4", features = ["serde"] }

figment = "0.9.4"

serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["handlebars_templates", "tera_templates"] }

educe = { version = "0.4.13", features = ["Debug", "Default", "Hash", "Clone", "Copy"] }
